Bug 336376: Keywords are treated as identifiers in object literals or after '::', '.', '..' unless they are part of namespace prefix. I.e. now {try: 1}, obj.delete(), xml..in, ns::new are valid while xml.try::elem is not allowed and xml.function::child continues to refer to the method named child. r=brendan